# church_volunteer_system

./: .gitignore  check_DB_build.py  pyproject.toml
app/: database.py  models.py  scheduler.py  send_line.py  utils.py  檢查DB建立是否成功.py  檢查資料庫表是否建立.py
database/: church.db
